--- a/scss/_desktop-min.scss
+++ b/scss/_desktop-min.scss
@@ -3,9 +3,31 @@
         max-width: 792px;
     }
     header {
-        flex-direction: column;
-        padding-bottom: 20px;
-        
+        nav {
+            flex-direction: column;
+            background: aliceblue;
+            position: absolute;
+            left: 0;
+            top: 0px;
+            z-index: 999;
+            width: 280px;
+            text-align: center;
+            height: 100%;
+            padding: 30px 0 0;
+
+            ul {
+                flex-direction: column;
+            }
+            .signup {
+                flex-direction: column;
+            }
+        }
+        .nav{
+            display: none;
+        }
+        button {
+            display: block;
+        }
     }
     .section2{
         .items{
