--- a/css/style.css
+++ b/css/style.css
@@ -41,78 +41,82 @@ h1 {
 
 .container {
   margin: 0px auto;
+  padding: 0px 15px;
+  width: 100%;
   max-width: 1200px;
 }
 
-.section1, .section2 {
+header {
   background: #2fff949e;
 }
-
-header {
-  max-width: 1440px;
+header .wrapper {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
-header .logo {
+header .wrapper .logo {
   margin: 20px 0px 4px 30px;
 }
-header .logo img {
+header .wrapper .logo img {
   width: 100%;
+  max-width: 100px;
 }
-header nav {
+header .wrapper nav {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-header nav ul {
+header .wrapper nav ul {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
 }
-header nav ul li {
+header .wrapper nav ul li {
   padding: 10px 20px;
 }
-header nav ul li a {
+header .wrapper nav ul li a {
   color: #9900ffe8;
   text-decoration: none;
 }
-header nav ul li a:hover, header nav ul li a:active {
+header .wrapper nav ul li a:hover, header .wrapper nav ul li a:active {
   color: #000;
   border-bottom: 2px solid;
 }
-header nav .signup {
+header .wrapper nav .signup {
   display: flex;
   flex-wrap: wrap;
   margin: 0 20px;
 }
-header nav .signup a {
+header .wrapper nav .signup a {
   color: #000;
   text-decoration: none;
   padding: 10px 20px;
 }
-header nav .signup a:nth-child(2) {
+header .wrapper nav .signup a:nth-child(2) {
   background: #fff;
   font-weight: bold;
   border-radius: 10px;
 }
-header button {
+header .wrapper button {
   display: none;
   cursor: pointer;
 }
-header button i {
+header .wrapper button i {
   font-size: 25px;
   padding: 5px 15px;
   background: #fff;
   border-radius: 3px;
   color: #9900ffe8;
 }
-header button i:hover {
+header .wrapper button i:hover {
   color: #2fff949e;
 }
 
+.section2 {
+  background: #2fff949e;
+}
 .section2 .items {
   display: flex;
   flex-wrap: wrap;
@@ -125,7 +129,7 @@ header button i:hover {
   width: 47%;
 }
 .section2 .items .item:nth-child(1) {
-  padding: 0px 30px;
+  padding: 0px 30px 0px 0px;
 }
 .section2 .items .item:nth-child(1) h1 {
   text-shadow: 0px 2px white;
@@ -149,10 +153,12 @@ header button i:hover {
   color: #2fff949e;
 }
 .section2 .items .item:nth-child(1) .btn:hover {
-  color: #2fff949e;
+  color: #9900ffe8;
+  background: #fff;
+  border: 1px solid #3a3838;
 }
 .section2 .items .item:nth-child(2) img {
-  width: 100%;
+  width: 96%;
 }
 .section2 .top-wave {
   width: 100%;
@@ -198,12 +204,14 @@ header button i:hover {
   padding: 12px 20px;
   border-radius: 10px;
   border: 1px solid gray;
+  color: #9900ffe8;
 }
 .section3 .items .item .btn i {
   color: #2fff949e;
 }
 .section3 .items .item .btn:hover {
-  color: #ca31d8;
+  color: #fff;
+  background: #9900ffe8;
 }
 
 .section4 .content, .section5 .content, .section6 .content {
@@ -326,6 +334,10 @@ header button i:hover {
 .section7 .items .item ul li a i {
   padding: 0 10px;
 }
+.section7 .items .item ul li a:hover {
+  background: #fff;
+  color: #000;
+}
 
 .bottom-wave {
   width: 100%;
@@ -389,28 +401,43 @@ footer .links ul li a:hover {
     max-width: 792px;
   }
 
-  header nav {
+  header .wrapper nav {
     flex-direction: column;
     background: aliceblue;
     position: absolute;
     left: 0;
     top: 0px;
     z-index: 999;
-    width: 280px;
+    overflow-x: hidden;
+    width: 0px;
     text-align: center;
     height: 100%;
-    padding: 30px 0 0;
+    padding: 40px 0 0;
+    transition: width 1s;
+    margin-left: -60px;
   }
-  header nav ul {
+  header .wrapper nav ul {
     flex-direction: column;
   }
-  header nav .signup {
+  header .wrapper nav .signup {
     flex-direction: column;
   }
-  header .nav {
-    display: none;
+  header .wrapper nav #close {
+    position: absolute;
+    right: 20px;
+    top: 40px;
+    cursor: pointer;
+    padding: 8px 11px;
+    border-radius: 50%;
+    background: #2fff949e;
+    color: #fff;
   }
-  header button {
+  header .wrapper nav #close:hover {
+    background: #fff;
+    color: #2fff949e;
+    border: 1px solid #2fff949e;
+  }
+  header .wrapper button {
     display: block;
   }
 
