--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -31,6 +31,11 @@ h1{
     font-size: 50px;
     font-weight: bold;
 }
+@mixin container {
+    margin: 0px auto;
+    padding: 0px 15px;
+    width: 100%;
+}
 @mixin button {
     text-decoration: none;
     font-size: 18px;
