--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,75 +1,76 @@
 .container{
-    margin: 0px auto;
+    @include container;
     max-width: 1200px;
 }
-.section1, .section2{
-    background: #2fff949e;
-}
 header {
-    max-width: 1440px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    .logo {
-        margin: 20px 0px 4px 30px;
-        img {
-            width: 100%;
-        }
-    }
-    nav{
+    background: $primary;
+    .wrapper{
+        margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         align-items: center;
-        ul {
+        .logo {
+            margin: 20px 0px 4px 30px;
+            img {
+                width: 100%;
+                max-width: 100px;
+            }
+        }
+        nav{
             display: flex;
             flex-wrap: wrap;
-            list-style: none;
-            li{
-                padding: 10px 20px;
-                a{
-                    color: $secondary;
+            align-items: center;
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                list-style: none;
+                li{
+                    padding: 10px 20px;
+                    a{
+                        color: $secondary;
+                        text-decoration: none;
+                        &:hover, &:active{
+                            color: $black;
+                            border-bottom: 2px solid;
+                        }
+                    }
+                }
+            }
+            .signup {
+                display: flex;
+                flex-wrap: wrap;
+                margin: 0 20px;
+                a {
+                    color: $black;
                     text-decoration: none;
-                    &:hover, &:active{
-                        color: $black;
-                        border-bottom: 2px solid;
+                    padding: 10px 20px;
+                    &:nth-child(2){
+                        background: $white;
+                        font-weight: bold;
+                        border-radius: 10px;
                     }
                 }
             }
         }
-        .signup {
-            display: flex;
-            flex-wrap: wrap;
-            margin: 0 20px;
-            a {
-                color: $black;
-                text-decoration: none;
-                padding: 10px 20px;
-                &:nth-child(2){
-                    background: $white;
-                    font-weight: bold;
-                    border-radius: 10px;
+        button{
+            display: none;
+            cursor: pointer;
+            i {
+                font-size: 25px;
+                padding: 5px 15px;
+                background: $white;
+                border-radius: 3px;
+                color: $secondary;
+                &:hover{
+                    color: $primary;
                 }
-            }
-        }
-    }
-    button{
-        display: none;
-        cursor: pointer;
-        i {
-            font-size: 25px;
-            padding: 5px 15px;
-            background: $white;
-            border-radius: 3px;
-            color: $secondary;
-            &:hover{
-                color: $primary;
             }
         }
     }
 }
 .section2{
+    background: $primary;
     .items {
         display: flex;
         flex-wrap: wrap;
@@ -80,7 +81,7 @@ header {
         .item {
             width: 47%;
             &:nth-child(1){
-                padding: 0px 30px;
+                padding: 0px 30px 0px 0px;
                 h1 {
                     text-shadow: 0px 2px white;
                     font-size: 50px;
@@ -94,15 +95,17 @@ header {
                 .btn {
                     @include button;
                     background: $secondary;
-                    color: #fff;
+                    color: $white;
                     &:hover{
-                        color: $primary;
+                        color: $secondary;
+                        background: $white;
+                        border: 1px solid $black-gray;
                     }
                 }
             }
             &:nth-child(2){
                 img {
-                    width: 100%;
+                    width: 96%;
                 }
             }
         }
@@ -142,8 +145,10 @@ header {
             .btn{
                 @include button;
                 border: 1px solid gray;
+                color: $secondary;
                 &:hover{
-                    color: $pink;
+                    color: $white;
+                    background: $secondary;
                 }
             }
         }
@@ -277,6 +282,10 @@ header {
                         text-decoration: none;
                         i {
                             padding: 0 10px;
+                        }
+                        &:hover{
+                            background: $white;
+                            color: $black;
                         }
                     }
                 }
