--- a/scss/_mobiles.scss
+++ b/scss/_mobiles.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: $sm) {
     .container{
-        max-width: 376px;
+        max-width: 95%;
     }
     header{
         nav{
