--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: $md) {
     .container{
-        max-width: 568px;
+        max-width: 95%;
     }
     .section3 .items .item {
         width: 45%;
