--- a/scss/_desktop-min.scss
+++ b/scss/_desktop-min.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: $lg) {
     .container{
-        max-width: 792px;
+        max-width: 95%;
     }
     header {
         .wrapper{
